# Desktop-software-for-restoring-and-activating-software--monitor--written-in-C--

./: CMakeLists.txt  LimitSingleInstance.h  README.md  curlSender.cpp  deleteSelf.cpp  jsoncpp.cpp  main.cpp  printProcessNameAndID.cpp  properties.rc
